# AncientSpeciesInEnglish

./: .gitignore  LICENSE  README.md  pyproject.toml
1.3/Languages/English/DefInjected/AlienRace.BackstoryDef/: Backstory.xml
1.3/Languages/English/DefInjected/AlienRace.ThingDef_AlienRace/: Race_WAE.xml  Race_WHE.xml
1.3/Languages/English/DefInjected/BodyDef/: Body.xml
1.3/Languages/English/DefInjected/CultureDef/: FuctionCultures.xml
1.3/Languages/English/DefInjected/FactionDef/: Factions_NPC.xml
1.3/Languages/English/DefInjected/PawnKindDef/: PawnKinds.xml
1.3/Languages/English/DefInjected/RecipeDef/: Recipes_Add_Make.xml
1.3/Languages/English/DefInjected/ResearchProjectDef/: ResearchProjects.xml
1.3/Languages/English/DefInjected/ResearchTabDef/: ResearchProjects.xml
1.3/Languages/English/DefInjected/ScenarioDef/: Scenario.xml
1.3/Languages/English/DefInjected/StyleItemCategoryDef/: Hairs.xml
1.3/Languages/English/DefInjected/ThingCategoryDef/: Apparel_UnderMiddle.xml
1.3/Languages/English/DefInjected/ThingDef/: Apparel_Backpack.xml  Apparel_Coat.xml  Apparel_Neck.xml  Apparel_OnSkin.xml  Apparel_OverHead.xml  Apparel_Shell.xml  Weapon_Melee.xml  Weapons_Ranged.xml  Weapons_WAE_Ranged.xml  Weapons_WHEAT_Ranged.xml  Weapons_WHE_Ranged.xml
1.3/Languages/English/DefInjected/TraderKindDef/: TraderKinds_Caravan.xml
About/: About.xml
Source/: Preview.xcf
Source/data/1.3/Languages/English/DefInjected/: all.xml
devtools/: PACKAGE.py  gen_rim4py_defs.py  import_defs_from.py  test.py
devtools/rim4py/: definject.py
devtools/rim4py/defs/: def.py
(+1 files in other folders)
