[tool.poetry]
name = "asie"
version = "0.0.1"
description = ""
authors = ["Rob Nelson <nexisentertainment@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.9.1"
beautifulsoup4 = "^4.11.1"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
poetryup = "^0.10.0"
pybuildtools = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
